feat : add tests
