# src/main/java/io/belleme/renovation/model/exception/EmailAlreadyAnsweredException.java
@@ -1,0 +1,8 @@
+package io.belleme.renovation.model.exception;
+
+public class EmailAlreadyAnsweredException extends RuntimeException {
+
+    public EmailAlreadyAnsweredException() {
+        super("L'email a déjà répondu au questionnaire.");
+    }
+}
