# src/main/java/io/belleme/renovation/model/mapper/ApiMapper.java
@@ -1,11 +1,10 @@
 package io.belleme.renovation.model.mapper;
 
-import io.belleme.renovation.model.Intitule;
-import io.belleme.renovation.model.Question;
-import io.belleme.renovation.model.Reponse;
+import io.belleme.renovation.model.*;
 import org.mapstruct.Mapper;
 import org.mapstruct.factory.Mappers;
 import org.openapitools.model.QuestionDto;
+import org.openapitools.model.QuestionnaireDto;
 import org.openapitools.model.ReponseDto;
 
 @Mapper
@@ -16,11 +15,23 @@ public interface ApiMapper {
 
     ReponseDto toDto(Reponse reponse);
 
+    Questionnaire fromDto(QuestionnaireDto dto);
+
+    QuestionnaireDto toDto(Questionnaire questionnaire);
+
     default String toDto(Intitule intitule) {
         return intitule.getValue();
     }
 
-    default Intitule fromDto(String s) {
+    default Intitule fromIntituleDto(String s) {
         return new Intitule(s);
+    }
+
+    default String toDto(Email email) {
+        return email.getValue();
+    }
+
+    default Email fromEmailDto(String s) {
+        return new Email(s);
     }
 }
